# EventCountdown

./: .gitignore  CMakeLists.txt  Inno Setup Script.iss  README.md  Terminal Commands.txt  countdowntile.cpp  countdowntile.h  editcountdowndialog.cpp  editcountdowndialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  outlinedlabel.h  resources.qrc  utils.cpp  utils.h
old/: createcountdownwidget.cpp  createcountdownwidget.h  createcountdownwidget.ui  outlinedlabel.h  outlinedlable.cpp
